--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@ $.each( $("#thanhtoan form-control"), function( key, value ) {
 });
 */
 var tmp = $("#bangthanhtoan tr");
-var t = tmp.length();
+var t = tmp.length;
 var last = tmp[t-1];
 var sosp = 0;
 var sotien = 0;
