--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ input {
 	</div>
 	<div class="card-body" id = "khungdonthuoc">
 
-	  <ol id = "donthuoc">
+	  <ol id = "donthuoc" class ="no-gutters">
   		
 	  </ol>
 		
@@ -372,9 +372,11 @@ input {
     </table>    
     <!-- Write HTML just like a web page -->
     <h4 align="center"><b>ĐƠN THUỐC</b></h4>
-    <p  style="line-height:1.6">Họ và tên: <span id = "don_ten"></span> &nbsp;&nbsp; Tuổi: <span id = "don_tuoi"></span> &nbsp;&nbsp;Giới: <span id = "don_gioi"></span><br/>
-    Địa chỉ: <span id = "don_diachi"></span> <br/>
-    Số điện thoại: <span id = "don_sdt"></span></p>
+    <p>Họ và tên: <span id = "don_ten"></span> Tuổi: <span id = "don_tuoi"></span> <br/>
+       Giới: <span id = "don_gioi"></span>
+       Địa chỉ: <span id = "don_diachi"></span><br/>
+       Số điện thoại: <span id = "don_sdt"></span>
+    </p>
     <table>
         <tr>
         	<td>
