--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@ ol {
 	
 	<div class="row no-gutters">
   	<div class="col-3">
-    <span class="badge badge-primary">Kính cầu MP(diop)</span>
+    <span class="badge badge-primary">Số cầu MP(diop)</span>
     <input class="form-control" id="kcmp" placeholder="Số cầu">
     </div>
     <div class="col-3">
-    <span class="badge badge-primary">Kính trụ MP(PD)</span>
+    <span class="badge badge-primary">Số trụ MP(PD)</span>
     <input class="form-control" id="ktmp" placeholder="Số trụ">
     </div>
 	<div class="col-3">
@@ -148,11 +148,11 @@ ol {
 	
 	<div class="row no-gutters">
   	<div class="col-3">
-    <span class="badge badge-primary">Kính cầu MT(diop)</span>
+    <span class="badge badge-primary">Số cầu MT(diop)</span>
     <input class="form-control" id="kcmt" placeholder="Số cầu">
     </div>
     <div class="col-3">
-    <span class="badge badge-primary">Kính trụ MT(PD)</span>
+    <span class="badge badge-primary">Số trụ MT(PD)</span>
     <input class="form-control" id="ktmt" placeholder="Số trụ">
     </div>
 	<div class="col-3">
@@ -395,9 +395,9 @@ ol {
     </table>    
     <!-- Write HTML just like a web page -->
     <h4 align="center"><b>ĐƠN THUỐC</b></h4>
-    <p>Họ và tên: <span id = "don_ten"></span> &nbsp; Tuổi: <span id = "don_tuoi"></span> &nbsp;Giới: <span id = "don_gioi"></span></p>
-    <p>Địa chỉ: <span id = "don_diachi"></span></p>
-    <p>Số điện thoại: <span id = "don_sdt"></span></p>
+    <p style = "margin-bottom: 2px;" class = "text-truncate">Họ và tên: <span id = "don_ten"></span> &nbsp; Tuổi: <span id = "don_tuoi"></span> &nbsp;Giới: <span id = "don_gioi"></span></p>
+    <p style = "margin-bottom: 2px;" class = "text-truncate">Địa chỉ: <span id = "don_diachi"></span></p>
+    <p style = "margin-bottom: 2px;">Số điện thoại: <span id = "don_sdt"></span></p>
     <table>
         <tr>
         	<td>
