--- a/index.html
+++ b/index.html
@@ -395,8 +395,8 @@ ol {
     </table>    
     <!-- Write HTML just like a web page -->
     <h4 align="center"><b>ĐƠN THUỐC</b></h4>
-    <p style = "margin-bottom: 2px;" class = "text-truncate">Họ và tên: <span id = "don_ten"></span> &nbsp; Tuổi: <span id = "don_tuoi"></span> &nbsp;Giới: <span id = "don_gioi"></span></p>
-    <p style = "margin-bottom: 2px;" class = "text-truncate">Địa chỉ: <span id = "don_diachi"></span></p>
+    <p style = "margin-bottom: 2px;text-transform: capitalize;" class = "text-truncate">Họ và tên: <span id = "don_ten"></span> &nbsp; Tuổi: <span id = "don_tuoi"></span> &nbsp;Giới: <span id = "don_gioi"></span></p>
+    <p style = "margin-bottom: 2px;text-transform: capitalize;" class = "text-truncate">Địa chỉ: <span id = "don_diachi"></span></p>
     <p style = "margin-bottom: 2px;">Số điện thoại: <span id = "don_sdt"></span></p>
     <table>
         <tr>
