--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ ol {
 <!-- Set also "landscape" if you need -->
 <div class="collapse" id = "maudon">
 <div class="A5">
-  <section class="sheet padding-10mm">
+  <section class="sheet padding-10mm" style = "margin: 2mm:">
     <div id="qrcode" style = "position: absolute;top: 15px;right: 45px; "></div>
     <table style="border-collapse: collapse; border: none;">
         <tr style="border: none; padding: 0px;">
