--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@ ol {
         </tr>
         <tr style="border: none; padding: 0px;">
         	<td style="border: none; text-align: center; font-size: 13px;"> 
-        	 <b>TÚ MINH</b><br/>
-			 <span style="font-size: 11px;">Đ/c:24 BT5-KĐT Văn Quán<br/>Hà Đông-Hà Nội</span>
+        	 <b>TÚ CHI</b><br/>
+			 <span style="font-size: 11px;">Đ/c:24 BT5- Nguyễn Khuyến<br/>Văn Quán - Hà Đông</span>
         	</td>
            
             <td style="border: none;">
@@ -456,12 +456,12 @@ ol {
 	<tr>
 	<td>Làm việc:</td>
 	<td>T2-T6:</td>
-	<td>17h - 21h</td>
+	<td>17h30 - 19h30</td>
 	</tr>
 	<tr>
 	<td></td>
-	<td>T7-CN:</td>
-	<td>07h - 21h</td>
+	<td>CN:</td>
+	<td>08h - 18h30</td>
 	</tr>
 	</table>
   </section>
