--- a/index.html
+++ b/index.html
@@ -460,6 +460,11 @@ ol {
 	</tr>
 	<tr>
 	<td></td>
+	<td>T7:</td>
+	<td>PK nghỉ</td>
+	</tr>
+	<tr>
+	<td></td>
 	<td>CN:</td>
 	<td>08h - 18h30</td>
 	</tr>
