--- a/index.html
+++ b/index.html
@@ -395,8 +395,8 @@ ol {
     </table>    
     <!-- Write HTML just like a web page -->
     <h4 align="center"><b>ĐƠN THUỐC</b></h4>
-    <p style = "margin-bottom: 2px;text-transform: capitalize;" class = "text-truncate">Họ và tên: <span id = "don_ten"></span> &nbsp; Tuổi: <span id = "don_tuoi"></span> &nbsp;Giới: <span id = "don_gioi"></span></p>
-    <p style = "margin-bottom: 2px;text-transform: capitalize;" class = "text-truncate">Địa chỉ: <span id = "don_diachi"></span></p>
+    <p style = "margin-bottom: 2px;">Họ và tên: <span id = "don_ten" style = "text-transform: capitalize;"></span> &nbsp; Tuổi: <span id = "don_tuoi"></span> &nbsp;Giới: <span id = "don_gioi"></span></p>
+    <p style = "margin-bottom: 2px;text-transform: capitalize;">Địa chỉ: <span id = "don_diachi"></span></p>
     <p style = "margin-bottom: 2px;">Số điện thoại: <span id = "don_sdt"></span></p>
     <table>
         <tr>
@@ -909,7 +909,7 @@ var donkinh =
  </td>
 </tr>
 </table>
-<p>Số Add: ${soAdd};&nbsp;PD: ${kcdt};&nbsp;Loại kính: ${loaikinh}.</p>
+<p>Số Add: +${soAdd}D;&nbsp;PD: ${kcdt};&nbsp;Loại kính: ${loaikinh}.</p>
 `;
 $("#don_donkinh").html(donkinh);
 InDonThuoc();
@@ -1001,13 +1001,12 @@ sosp += ssp;
 sotien += khoantien;	
 console.log(sosp, sotien, $(this).find("td:eq(0)").find("input").val(), $(this).find("td:eq(1)").find("input").val(), $(this).find("td:eq(2)").val(), $(this).find("td:eq(3)").val());
 });
-	
-last.find("td:eq(3)").find("input").val(sotien.toString());
-last.find("td:eq(1)").find("input").val(sosp.toString());	
+var thanhtien = (sotien * 1000)	.toLocaleString() +" vnđ";
+last.find("td:eq(3)").find("input").val(thanhtien);
+last.find("td:eq(1)").find("input").val(sosp.toString()+ " khoản");	
 }
 
 </script>
 
 
 </html>
-
