--- a/iolm.html
+++ b/iolm.html
@@ -33,7 +33,7 @@ ol {
  			 display: block;
  			 margin-left: auto;
  			 margin-right: auto;
- 			 width: 50%;
+ 			 width: 100%;
 			} 		
 			
 </style> 
@@ -436,7 +436,7 @@ function MainCalc() {
 	}	
 
 	SeeTable();
-	SetFocus("idAL");	
+	SetFocus("id_IOLTable");	
 	
  	//alert(HaigisIOL(45, 23, 118, 3, 0, 0.1, 0.4, 1.273) + "," + HaigisValue);
  	SeeImage();
