--- a/minhhoa.html
+++ b/minhhoa.html
@@ -1,1 +1,26 @@
-<p>Đang x&acirc;y dựng</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Minh họa</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style type="text/css">
+    img {
+     max-width: 100%;
+     height: auto;
+    }
+  </style>
+</head>
+<body>
+<p>Các phẫu thuật/thủ thuật hay thực hiện trên lâm sàng</p>
+
+<p>1. Phẫu thuật cắt bè củng giác mạc</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/LQwQJPQ5KZY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>2.Phẫu thuật mộng ghép</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/116pG-QgWmw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>3. Phẫu thuật quặm mi trên</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/D5ISfAhaZKU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+</body>
+</html>
