--- a/minhhoa.html
+++ b/minhhoa.html
@@ -14,13 +14,13 @@
 <p>Các phẫu thuật/thủ thuật hay thực hiện trên lâm sàng</p>
 
 <p>1. Phẫu thuật cắt bè củng giác mạc</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/LQwQJPQ5KZY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100%" height="300" src="https://www.youtube.com/embed/LQwQJPQ5KZY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <p>2.Phẫu thuật mộng ghép</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/116pG-QgWmw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100%" height="300" src="https://www.youtube.com/embed/116pG-QgWmw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <p>3. Phẫu thuật quặm mi trên</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/D5ISfAhaZKU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100%" height="300" src="https://www.youtube.com/embed/D5ISfAhaZKU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
 </html>
