--- a/iolm.html
+++ b/iolm.html
@@ -1401,7 +1401,7 @@ function CalcMyAge(){
 	var isAndroid = ua.indexOf("android") > -1; //&& ua.indexOf("mobile");
 	if(isAndroid) {
 	 if(confirm('Bạn có muốn tải phiên bản Android về điện thoại?') == true)
-        window.location = 'https://drive.google.com/open?id=1JTHfftgL8BHHF8sPWOSKzOJLKPn9L6Qf';
+        window.location = 'https://github.com/drthinh/drthinh/releases/download/1.0/iol-calc-drthinh.apk';
 }
 	</script>
 </body></html>
