--- a/capnhat.html
+++ b/capnhat.html
@@ -1,2 +1,2 @@
 <p>Đang x&acirc;y dựng</p>
-<a src = "http://envi.glitch.me/">Từ điển Nhãn khoa</a>
+<a href = "http://envi.glitch.me/">Từ điển Nhãn khoa</a>
