Update and rename home.html to index.html

--- a/nhankhoa/index.html
+++ b/nhankhoa/index.html
@@ -23,6 +23,16 @@ a:active {
   top: 5px;
 }
   </style>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160779941-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160779941-1');
+</script>
+
 </head>
 <body>
 <h2 style="text-align: center;"><strong>PHẦN MỀM NHÃN KHOA</strong></h2>
