--- a/nhankhoa/new1.html
+++ b/nhankhoa/new1.html
@@ -16,6 +16,10 @@
 <button class="button secondary outline small">Small</button>
 <button class="button success outline">Default</button>
 <button class="button alert outline large">Outline Large</button>
+<button class="button primary square mini"></button>
+<button class="button primary square outline"></button>
+<button class="button primary cycle small outline"></button>
+<button class="button primary cycle "></button>
     <script src="metro..min.js"></script>
 </body>
 </html>
