--- a/nhankhoa/colortest.html
+++ b/nhankhoa/colortest.html
@@ -100,6 +100,17 @@
 	</style>
 </head>
 <body>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160779941-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160779941-1');
+</script>	
+	
+	
+	
 <!-- Slideshow container -->
 <a href="functional.html">Quay lại</a>
 <div class="slideshow-container">
