--- a/nhankhoa/functional.html
+++ b/nhankhoa/functional.html
@@ -11,6 +11,15 @@
   </style>
 </head>
 <body>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160779941-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160779941-1');
+</script>	
+	
 <p id="mucluc">Danh sách</p>
 
 <a href="#Fluorescein_test"><p>1. Bảng màu xanh (test Fluorescein)</p></a>
