--- a/nhankhoa/help.html
+++ b/nhankhoa/help.html
@@ -11,6 +11,15 @@
   </style>
 </head>
 <body>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160779941-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160779941-1');
+</script>	
+	
 <p>Phần mềm được viết tr&ecirc;n nền tảng B4A</p>
 <p>T&aacute;c giả: Nguyễn Đức Thịnh, BS Nh&atilde;n khoa CH 27 HMU @2020</p>
 <p>Email: <a href="mailto:nguyenducthinh1710@gmail.com">nguyenducthinh1710@gmail.com</a></p>
