--- a/nhankhoa/iolm.html
+++ b/nhankhoa/iolm.html
@@ -39,6 +39,16 @@ ol {
 </style> 
 <script src="jquery-2.2.1.min.js"></script>
 <script src="bootstrap.min.js"></script>
+	
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160779941-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160779941-1');
+</script>	
+	
 <script type="text/javascript">
 
 
