--- a/nhankhoa/setting.html
+++ b/nhankhoa/setting.html
@@ -8,7 +8,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="jquery.datetimepicker.css"/>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160779941-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-160779941-1');
+</script>
 </head>
 <body>
 <div class="container col-sm-4 col-md-7 col-lg-4 mt-5">
