--- a/nhankhoa/surgery.html
+++ b/nhankhoa/surgery.html
@@ -9,6 +9,14 @@
      height: auto;
     }
   </style>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160779941-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160779941-1');
+</script>
 </head>
 <body>
         <p id="mucluc" style="text-align: center;"><strong>DANH SÁCH</strong></p>
