--- a/nhankhoa/unitconverter.html
+++ b/nhankhoa/unitconverter.html
@@ -4,6 +4,14 @@
 	<title>Quy đổi đơn vị</title>
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <link rel="stylesheet" href="bootstrap.min.css">
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160779941-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160779941-1');
+</script>
 </head>
 <style type="text/css">
 img {
