--- a/minhhoa.html
+++ b/minhhoa.html
@@ -9,6 +9,14 @@
      height: auto;
     }
   </style>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160779941-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160779941-1');
+</script>
 </head>
 <body>
 <p>Các phẫu thuật/thủ thuật hay thực hiện trên lâm sàng</p>
